--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #333;
-    color: white;
+    background-color: rgba(0, 0, 0, 0.82);
+    color: black;
     padding: 40px;
     text-align: center;
   }
@@ -10,13 +10,13 @@
   }
   
   .footer-logo img {
-    height: 50px;
+    height: 75px;
     margin-bottom: 10px;
   }
   
   .footer-logo p {
     font-size: 1.2rem;
-    color: #aaa;
+    color: white;
   }
   
   .footer-contact {
@@ -25,11 +25,11 @@
   
   .footer-contact p {
     margin: 5px 0;
-    color: #aaa;
+    color: white;
   }
   
   .footer-links a {
-    color: #1d72b8;
+    color: white;
     text-decoration: none;
     margin: 0 10px;
     font-weight: bold;
