--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,7 +2,7 @@
 .hero {
     background-size: cover;
     background-position: center;
-    height: 80vh;
+    height: 91vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,19 +11,19 @@
     color: white;
     position: relative;
     font-family: Coolvetica, sans-serif ;
-
   }
+
+
   
   .hero-text {
     margin-bottom: 20px;
   }
   
   .hero-text h1 {
-    font-size: 4.5rem;
+    font-size: 5rem;
     margin: 10px 0;
     letter-spacing: 2px;
     font-weight: bold;
-    
   }
 
   .hero-text h2 {
@@ -37,22 +37,22 @@
     padding: 15px 30px;
     font-size: 18px;
     font-weight: bold;
-    
     border: none;
-    background-color: rgba(30, 30, 30, 1);
-    color: white;
+    background-color: #CA623E;
+    color: rgb(244, 220, 186);
     cursor: pointer;
     margin: 10px;
     transition: background-color 0.3s;
     border-radius: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 350px;
+    margin-left: 50px;
 
-    
   }
   
   .hero button:hover {
-    background-color: white;
-    color: black;
+    background-color: rgb(244, 220, 186);
+    color: #CA623E;
+    opacity: 1;
   }
 
 
@@ -65,6 +65,8 @@
     align-items:  center;
     padding: 50px;
     gap: 20px;
+    background-color: rgb(244, 220, 186);
+
   }
 
   .aboutP{
@@ -85,8 +87,10 @@
   }
   
   .about-company h2 {
-    font-size: 2rem;
-  }
+    font-size: 2.25rem;
+    font-family: Coolvetica, sans-serif;
+    font-weight: lighter;
+    }
   
   .about-company p {
     line-height: 1.6;
@@ -102,28 +106,51 @@
 
   
 /* Services */
+.servicess {
+  padding: 50px;
+  background-color: #95CCBC;
+}
+
+.services-title {
+  font-size: 2.25rem;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #333;
+  font-family: Coolvetica, sans-serif;
+  font-weight: lighter;
+
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+
 .services {
   display: flex;
   justify-content: center;
   gap: 20px; /* Ajoute un écart uniforme entre les cartes */
   padding: 50px;
-  background-color: #f1f1f1;
+  background-color: #95CCBC;
   font-family: Coolvetica, sans-serif ;
 
 }
 
+
+
 .service {
   text-align: center;
-  border: 2px solid rgba(200, 200, 200, 0.8);
-  border-radius: 10px;
+  /* border: 2px solid rgba(139, 139, 139, 0.9); */
   overflow: hidden;
   position: relative;
-  width: 300px; /* Taille fixe pour assurer l'uniformité */
-  height: 490px; /* Taille fixe de la carte pour s'aligner avec l'image */
+  width: 325px; /* Taille fixe pour assurer l'uniformité */
+  height: 500px; /* Taille fixe de la carte pour s'aligner avec l'image */
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  border-radius: 5%;
+  background-color: rgb(244, 220, 186);
+
+
 }
 
 
@@ -131,7 +158,7 @@
 /* Conteneur de l'image avec une taille fixe */
 .image-container {
   width: 100%;        /* Occupe toute la largeur de la carte */
-  height: 490px;      /* Hauteur fixe pour l'uniformité */
+  height: 420px;      /* Hauteur fixe pour l'uniformité */
   overflow: hidden;   /* Cache les débordements pour les images plus grandes */
   display: flex;
   justify-content: center;
@@ -151,23 +178,25 @@
   font-size: 22px;
   font-weight: lighter;
   text-transform: none;  
-  margin: 15px 0 15px 0;
+  /* margin: 15px 0 15px 0; */
+  padding: 20px 20px 20px 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 /* Masque le texte et le bouton par défaut */
 .service p,
 .service button {
   opacity: 0;
-  position: absolute;
+  position:absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: opacity 0.3s ease;
-  z-index: 1; /* Mettre le texte et le bouton au-dessus de l'image */
 }
 
 .service:hover img {
-  opacity: 0.3; /* Réduire l'opacité de l'image au survol */
+  opacity: 0.2; /* Réduire l'opacité de l'image au survol */
 }
 
 .service:hover p,
@@ -176,19 +205,19 @@
 }
 
 .service p {
-  color: #777;
+  color: #171717;
   width: 80%;
-  margin: 0 auto 20px;
+  padding: 10px 10px 10px 10px;
 }
 
 .service button {
-  padding: 10px 20px;
+  padding: 10px 10px 10px 10px;  
   background-color: rgba(30, 30, 30, 1);
   color: white;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s;
-  margin-top: 20px;
+  top: 440px;
 }
 
 .service button:hover {
@@ -196,14 +225,13 @@
   color: black;  
 }
 
+
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-
-
 
   /* Qui sommes-nous ? */
   .about-founders {
     display: flex;
-    align-items: center;
+    align-items:  center;
     padding: 50px;
     gap: 20px;
   }
@@ -211,36 +239,103 @@
   .about-founders img {
     width: 50%;
     border-radius: 10px;
+    height: 600px;
+    width: 600px;
+    object-fit: cover;
   }
   
   .about-founders div {
     width: 50%;
+    padding: 50px;
+
   }
   
   .about-founders h2 {
-    font-size: 2rem;
     margin-bottom: 20px;
+    font-family: Coolvetica, sans-serif;
+    font-weight: lighter;
+    font-size: 2.25rem;
+
   }
   
   .about-founders p {
     line-height: 1.6;
     color: #555;
+    font-size: large;
+
   }
   
   /* Section Contact */
-  .contact {
-    background-color: #1d72b8;
-    color: white;
-    text-align: center;
-    padding: 50px;
-  }
-  
-  .contact h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-  
-  .contact p {
-    line-height: 1.6;
-  }
+.contact {
+  background-color: #f1f1f1;
+  text-align: center;
+  padding: 50px;
+}
+
+.contact h2 {
+  font-family: Coolvetica, sans-serif;
+  font-weight: lighter;
+  font-size: 2.25rem;  margin-bottom: 20px;
+}
+
+.contact-form {
+  max-width: 600px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* Alignement horizontal pour les champs par ligne */
+.form-row {
+  display: flex;
+  gap: 20px;
+}
+
+.form-group {
+  flex: 1; /* Permet de répartir uniformément les champs */
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+    padding-right: 15px;
+}
+
+.form-group label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 0.9rem;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-family: Arial, sans-serif;
+
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+  border-color: #666;
+  outline: none;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.submit-button:hover {
+  background-color: #CA623E;;
+  color: white;
+}
+
   
