--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -44,7 +44,8 @@
     margin: 10px;
     transition: background-color 0.3s;
     border-radius: 30px;
-    margin-bottom: 350px;
+    margin-bottom: 325px;
+    margin-top: 10px;    
     margin-left: 50px;
 
   }
@@ -115,7 +116,9 @@
   font-size: 2.25rem;
   text-align: center;
   margin-bottom: 30px;
-  color: #333;
+  /* color: #333; */
+  color: rgb(244, 220, 186);
+
   font-family: Coolvetica, sans-serif;
   font-weight: lighter;
 
@@ -191,6 +194,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   transition: opacity 0.3s ease;
+  
 }
 
 .service:hover img {
@@ -210,17 +214,18 @@
 
 .service button {
   padding: 10px 10px 10px 10px;  
-  background-color: rgba(30, 30, 30, 1);
-  color: white;
+  background-color: #CA623E;
+  color: rgb(244, 220, 186);
   border: none;
   cursor: pointer;
   transition: background-color 0.3s;
   top: 440px;
+
 }
 
 .service button:hover {
-  background-color: white;
-  color: black;  
+  color: #CA623E;
+  background-color: rgb(244, 220, 186);;  
 }
 
 
